index.css
* {
    border: none;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Public Sans', sans-serif;
}

.easycom-container-item:nth-child(2) {
    position: relative;
    z-index: -6;
}

body {
    width: 100vw;
    background-color: hsl(0, 0%, 98%);
    height: 100vh;
}

.nav-bar {
    display: none;
    background-color: hsl(0, 0%, 98%);
    flex-flow: column nowrap;
    text-decoration: none;
    justify-content: space-around;
    align-items: center;
    position: relative;
    top: 18vh;
    left: 0vw;

}

.nav-item {
    /* text-decoration: none; */
    list-style: none;
    text-align: center;
    height: 6vh;
    width: 20vh;
    margin: 0;
    background-color: hsl(0, 0%, 98%);

}

nav {
    background-color: rgb(241, 249, 249);
    width: 100%;
    min-height: 57px;
}

.nav-bar-unhide {
    display: flex;
}

.nav-container {
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-around;
    align-items: center;
}

.nav-container-item {
    position: relative;
}

a {
    text-decoration: none;
    color: black;
}

[src="./images/image-mockups.png"] {

    width: 100%;
    position: relative;
    display: inline-block;
    z-index: -1;
    bottom: 16vh;
    right: 0vh;


}

[src="./images/bg-intro-mobile.svg"] {
    width: 100vw;
    position: absolute;
    top: 2;
    bottom: 0;
    right: 0;
    left: 0;
    z-index: -2;/* right: 10vw; */
}

.easycom-head {
    color: hsl(233, 26%, 24%);

    font-size: 3rem;
}


.request {
    display: inline-block;
    width: 160px;
    height: 40px;
    border-radius: 20px;
    padding: 5px;
    color: white;
    display: block;
    margin: 20px auto;
    font-weight: bold;
    text-decoration: none;
    background: linear-gradient(to right, hsl(136, 65%, 51%), hsl(192, 70%, 51%));
}

button:hover {
    transform: scale(1.1);
    cursor: pointer;
}

.container1 {
    display: flex;
    flex-flow: column nowrap;
    justify-content: space-between;
    align-items: center;
    position: relative;

}

.easycom-container-item {
    text-align: center;
    width: 100%;
    min-height: 20vh;
    position: relative;
}



.easycom-container-item:nth-child(2) {
    font-size: 2.3rem;
    padding: 0px 9px;
    color: hsl(233, 26%, 24%);

}

.easycom-about {
    font-size: large;
    color: hsl(233, 8%, 62%);
    margin-top: 20px;
    line-height: 1.5;
    padding: 0px 30px;
}

.container2 {
    font-size: 2.3rem;
    font-weight: 300;
    color: hsl(233, 26%, 24%);
    text-align: center;
    padding: 88px 10px;
    background-color: hsl(220, 16%, 96%);
}

.container2>p {
    font-size: large;
    color: hsl(233, 8%, 62%);
    margin-top: 20px;
    padding: 40px;
}

.easycom-container2-wrapper {
    display: flex;
    flex-flow: column nowrap;
    justify-content: space-around;
    align-items: center;
    align-content: center;
}

.easycom-container2-item {
    font-size: large;
    margin: 20px;
    color: hsl(233, 8%, 62%);
    padding-top: 10px;
    padding: 10px 20px;
}

.easycom-container2-item p {
    margin-bottom: 30px;
    font-size: 1.5rem;
    line-height: 1.2px;
    color: hsl(233, 26%, 24%);

}

.easycom-container2-item:nth-child(1) {
    margin-top: 30px;
}

.container2 img {
    display: block;
    margin: 30px auto;
    padding-bottom: 30px;
}

.article-column {
    display: flex;
    flex-flow: column nowrap;
    gap: 30px;
}

.article-column img {
    width: 100%;
    min-height: fit-content;
    border-radius: 7px 7px 0px 0px;
}

article {
    margin: 40px 40px;
    text-align: center;
    color: hsl(233, 26%, 24%);
}

article>p {
    font-size: 2.3rem;
    margin-bottom: 50px;
    margin-top: 100px;
}

small {
    font-style: none;
    font-weight: none;
    text-align: start;
    font-size: 0.7rem;
    margin: 20px 20px;
    display: block;
    color: hsl(233, 8%, 62%);
}

.article-column p {
    margin: 15px 20px;
    text-align: start;
}

h5 {
    font-weight: 100;
    text-align: start;
    font-style: normal;
    font-size: 1.4rem;
    margin: 10px 20px;
}

.article-item>p {
    color: hsl(233, 8%, 62%);
    padding-bottom: 26px;
}

.article-item {
    background-color: hsl(0, 0%, 100%);
    border-radius: 7px;
}

footer>div>img {
    display: block;
    margin: 35px auto;

}



.social-media {
    list-style: none;
    display: flex;
    width: 50%;
    height: 42px;
    flex-flow: row nowrap;
    margin: 25px auto;
    justify-content: space-around;

}

.social-media-icon {
    margin: 5px;
}

.social-media-icon img {
    width: 31px;
}

footer {
    width: 100%;
    background-color: hsl(233, 26%, 24%);
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    justify-content: space-evenly;
    align-items: center;
}

.footer-section * {
    display: flex;
    flex-flow: column nowrap;
    justify-content: space-evenly;
    list-style: none;
    color: white;
    align-items: center;
}

.footer-section-item {
    margin: 16px;
}

.footer-item>button {
    margin-top: 19px;
}

.copyright-mark {
    color: hwb(233 59% 35%);
    display: block;
    width: 100%;
    margin: auto;
    text-align: center;
    font-size: smaller;
    padding-bottom: 40px;
}

@media(max-width:431px) {
    .nav-container-item:nth-child(4) {
        display: none;
    }


}

@media(min-width:431px) {
    .easycom-container2-wrapper {
        flex-direction: row;
        flex-wrap: nowrap;
    }

    .easycom-container-item>span {
        display: block;
        padding-left: 30px;
    }

    .easycom-container-item button {
        display: block;
        margin-left: 4vh;
    }

    .container2 {
        text-align: left;
    }

    .container2>span,
    .container2>p {
        padding-left: 3%;
    }

    .article-column {
        flex-direction: row;
        flex-wrap: nowrap;

    }

    article {
        padding: 0px 50px;
    }

    article>p {
        text-align: left;
    }

    .article-item img {
        height: 250px;
    }

    .container2 {
        padding: 50px 50px;
    }
}

@media (max-width:1000px) {
    .article-column {
        flex-direction: column;
        flex-wrap: nowrap;
    }
}

@media(max-width:1244px) {
    .easycom-container2-wrapper {
        flex-direction: row;
        flex-wrap: wrap;
    }
}

@media(min-width:431px) {
    .container2 img {
        display: block;
        margin: 30px 0px;
    }
}

@media (min-width:912px) {
    footer {
        flex-direction: row;
        flex-wrap: nowrap;
        justify-content: space-between;
        padding: 35px;
    }

    .footer-section {
        height: 200px;
        display: flex;
        flex-direction: column;
        flex-wrap: wrap;
        justify-content: center;
        align-content: space-between;

    }

    .footer-section-item {
        margin: 20px 50px;

    }

    .footer-item:nth-child(2) {
        padding-right: 300px;
    }

    .copyright-mark {
        padding-right: 40px;
    }

    .social-media {
        padding-left: 40px;
    }
}

@media(min-width:431px) {
    .nav-bar {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: center;
        top: 1vh;
    }

    .nav-container-item:nth-child(3) {
        display: none;
    }

    .nav-item {
        background-color: rgb(241, 249, 249);
        max-width: 10vh;
    }

    .nav-item>a {
        color: hsl(233, 8%, 62%);
    }

    .nav-item:hover .nav-link {
        color: hsl(233, 26%, 24%);
    }

    .nav-item:hover {

        border-bottom: 4px solid hsl(150, 42%, 66%);
        transform: scale(1.1);
    }
}

@media(max-width:1097px) {
    .nav-container-item:nth-child(4) {
        display: none;
    }

    .nav-bar {
        display: none;
    }

    .nav-container-item:nth-child(3) {
        display: block;
    }
}

@media(min-width:431px) {
    .container1 {
        display: flex;
        flex-flow: row-reverse nowrap;
    }

    .easycom-container-item>img:nth-child(1) {
        display: none;
        z-index: 0;
    }

    .easycom-container-item>img:nth-child(2) {
        z-index: 1;
        position: relative;
        top: 10vh;

    }

    .easycom-container-item:nth-child(1) {

        z-index: -1;
        position: relative;
        top: -25vh;
        background: url('./images/bg-intro-desktop.svg') top left no-repeat;
        background-size: cover;
        background-position-x: -8vh;
        background-position-y: 2vh;
        padding-left: 60px;

    }

    .easycom-container-item:nth-child(2) {
        align-self: flex-start;
        padding: 15vh 5vh;


    }

    .easycom-container-item:nth-child(2) {
        text-align: left;
    }

    .container2 {
        margin-top: -30vh;
        position: relative;
        z-index: -2;
    }


}

@media (max-width:1100px) {

    .container2 {
        margin-top: 0px;
    }
}

@media(max-width:700px) {
    .easycom-container-item>img:nth-child(2) {
        width: 80vw;
    }
}

@media(max-width:1471px) {
    .easycom-container-item:nth-child(2) {
        padding: 20px;

    }
}

@media((min-width:431px) and (max-width:701px)) {
    .easycom-container-item>img:nth-child(2) {
        width: 100%;
    }

}

